# fastapi-learning

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  __init__.py  books.py  pyproject.toml  requirements.txt
project-2/: books.py
project_1/: books.py
project_2/: books.py
project_3/: __init__.py  alembic.ini  database.py  main.py  models.py  request_schemas.py  todos.db
project_3/alembic/: env.py
project_3/alembic/versions/: b364ade8be4a_initial_revision.py  c594498b3f2f_add_phone_number_to_user.py  ed06cb45f1d8_add_phone_number_to_user_table.py
project_3/routers/: __init__.py  admin.py  auth.py  todos.py  user.py
tests/: __init__.py  test_example.py  utils.py
tests/proj3/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_users.py
tests/project_3/: test_todos.py
todoapp/: __init__.py  main.py  models.py
todoapp/alembic/: env.py
todoapp/routers/: admin.py  auth.py  todos.py  user.py
todoapp/templates/: add-todo.html  edit-todo.html  home.html  layout.html  login.html  navbar.html  register.html  todo.html
todoapp/tests/: __init__.py  test_example.py  utils.py
todoapp/tests/test_todoapp/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_users.py
