[project]
name = "fastapi-learning"
version = "0.1.4"
description = "Learning FastAPI example: simple API exposing book endpoints with in-memory data, demonstrating path parameters and basic request/response behavior."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
