[project]
name = "fastapi-learning"
version = "0.1.4"
description = "Learning FastAPI example: simple API exposing book endpoints with in-memory data, demonstrating path parameters and basic request/response behavior."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt==4.0.1",
    "fastapi>=0.124.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
